# hermes-nodes-plugin

./: .gitignore  CONTRIBUTING.md  LICENSE  PROTOCOL.md  README.md  REQUIREMENTS-AUDIT.md  REQUIREMENTS.md  SECURITY-REVIEW.md  SECURITY.md  __init__.py  audit.py  cli.py  config.py  environment.py  errors.py  lifecycle.py  plugin.yaml  pyproject.toml  schemas.py  server.py  tokens.py  tools.py
.github/workflows/: release.yml  test.yml
docs/: PROTOCOL.md  REQUIREMENTS-AUDIT.md  REQUIREMENTS.md  SECURITY-REVIEW.md  architecture.md
hermes_nodes_plugin/: __init__.py  audit.py  cli.py  config.py  env.py  environment.py  errors.py  lifecycle.py  ratelimit.py  registry.py  server.py  tokens.py  tools.py
scripts/: run_server.py  start_server.sh
systemd/: hermes-nodes-server.service
tests/: test_audit.py  test_cli.py  test_config.py  test_env.py  test_environment.py  test_lazy_imports.py  test_lifecycle.py  test_offline.py  test_ratelimit.py  test_registry.py  test_server.py  test_smoke.py  test_tokens.py  test_tools.py
tests/e2e/: test_full_flow.py
wsserver/: __init__.py  handlers.py  server.py
