[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-nodes-plugin"
# Version is derived from git tags by setuptools-scm (see
# [tool.setuptools_scm] below). A plain `0.1.0` would freeze the
# version at the wrong number and require a manual bump on every
# release; the SCM-driven version always matches the current
# tag (e.g. tag ``0.2.0`` → version ``0.2.0``), so the GitHub
# release workflow can build a single sdist/wheel and the
# artifact's filename always reflects the tag that produced it.
dynamic = ["version"]
description = "Hermes Agent plugin: WSS node server for remote execution targets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Blasius User", email = "blasius.User@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Runtime deps. Task 2.2 (config schema) introduces `pyyaml`; Task 2.3
# (token store) adds `cryptography` for Fernet at-rest encryption
# (REQUIREMENTS NFR-1.2). Task 2.4 (WSS server) adds the ASGI stack:
# `fastapi` for the HTTP/WebSocket app, `uvicorn` for the production
# entry point, and `websockets` (also pulled in by Starlette at the
# server layer) for the client in tests.
dependencies = [
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "pytest-cov>=5",  # coverage gate (NFR-5.1)
    "ruff>=0.4",      # NFR-5.1: lint gate in CI
    "httpx>=0.27",  # ASGI client for tests (talks to FastAPI in-process)
]

[project.entry-points."hermes_agent.plugins"]
# Target the module (not `module:register`). `ep.load()` for a `module:function`
# target returns the function object, but Hermes's plugin loader does
# `module = ep.load(); getattr(module, "register", None)` — it expects `module`
# to be a real module. Pointing at the module form lets Hermes import the
# package and then pick `register` off it. See hermes_cli/plugins.py:_load_plugin.
hermes_nodes_plugin = "hermes_nodes_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_nodes_plugin*"]
exclude = ["tests*", "docs*", "scripts*", "systemd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

# NFR-5.1: coverage gate. pytest-cov is invoked from .github/workflows/test.yml
# with --cov-fail-under=80; these defaults shape the report (term-missing is
# also passed on the CLI for local runs too.
[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "tests/*",
    "docs/*",
    "scripts/*",
    "systemd/*",
    "*/__init__.py",
]

[tool.coverage.report]
# 80% floor is enforced by --cov-fail-under in CI; show_missing makes
# term-missing output actionable in local runs too.
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[project.scripts]
hermes-node = "hermes_nodes_plugin.cli:main"

# setuptools-scm configuration (Feature 2: GitHub release on tag).
#
# The plugin's version is now derived from git tags instead of a
# hard-coded ``version = "..."`` in [project]. The release workflow
# (``.github/workflows/release.yml``) tags with the bare semver
# (``0.2.0``, no ``v`` prefix) and ``python -m build`` produces an
# sdist + wheel whose filenames carry that exact version. The
# on-pypi / on-github release page and the local ``pip install``
# stay in sync without a manual bump.
#
# ``tag_regex`` strips the leading ``v`` that the default regex
# would also accept — we want *only* bare semver so an operator
# who tags ``v0.2.0`` (a footgun) doesn't get a release with the
# wrong version number embedded in the wheel filename.
#
# ``fallback_version`` is the version used when setuptools-scm
# cannot find a tag (e.g. a fresh checkout before the first
# release tag is pushed). ``local_version`` is appended in dev
# installs to make it visible that the build is from an
# untagged commit (``+d20250101``) — the dot before the date is
# PEP 440's "local segment" separator.
[tool.setuptools_scm]
tag_regex = "^(?P<version>[0-9]+(?:\\.[0-9]+)*)$"
fallback_version = "0.0.0+unknown"
local_scheme = "node-and-date"
